# WebApp

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  Dockerfile.nginx  README.md  app.py  assets.py  babel.cfg  bing.py  cache.py  compose.prod.yaml  compose.yaml  convert-icon.py  deploy-pipy.sh  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  download-music-video.sh  download.py  downloader.py  genius.py  keyval.py  metadata.py  mp.py  music.py  musicbrainz.py  pyproject.toml  requirements-dev.txt  requirements-offline.txt  requirements.txt  script.js  settings.py  style.css  tests.py  update-translations.sh
app/: __main__.py  auth.py  bing.py  cache.py  charts.py  cleanup.py  db.py  downloader.py  genius.py  gunicorn.conf.py  gunicorn_app.py  image.py  jsonw.py  language.py  lastfm.py  logconfig.py  main.py  manage.py  metadata.py  music.py  musicbrainz.py  news.py  news.py.old  offline_sync.py  packer.py  prometheus.py  radio.py  reddit.py  scanner.py  settings.py  util.py
app/migrations/: 0003-music.sql  0005-music.sql  0006-offline.sql  0009-music.sql  0014-music.sql  0015-music.sql  0019-music.sql  0024-music.sql  0025-music.sql  0026-music.sql  0029-music.sql  0030-music.sql  0031-music.sql  0032-music.sql
app/routes/: account.py  activity.py  auth.py  dislikes.py  download.py  export.py  files.py  games.py  news.py  player.py  playlist.py  playlists.py  radio.py  root.py  share.py  stats.py  track.py  users.py
app/sql/: cache.sql  meta.sql  music.sql  offline.sql
app/templates/: account.jinja2  activity.jinja2  base.jinja2  download.jinja2  download_offline.jinja2  files.jinja2  games_chairs.jinja2  games_guess.jinja2  home.jinja2  info.jinja2  install.jinja2  login.jinja2  player.jinja2  playlists.jinja2  playlists_share.jinja2  radio.jinja2  share.jinja2  stats.jinja2  users.jinja2  users_edit.jinja2
docker/: default.conf  entrypoint-dev.sh  entrypoint-prod.sh  entrypoint.sh  manage  manage-dev.sh  manage-prod.sh  manage.sh  requirements.txt
docker/nginx/: default.conf  proxy.conf.template
docs/: api.md  databases.md  development.md  installation.md  manage.md  migrations.md  music-files.md  offline.md  offline_development.md  screenshots.md  settings.md  termux.md  trackdata.md  updating.md
docs/music-videos/: download-music-video.sh  readme.md
raphson_mp/: __main__.py  acoustid.py  auth.py  babel.cfg  bing.py  cache.py  charts.py  cleanup.py  db.py  decorators.py  downloader.py  genius.py  gunicorn_app.py  image.py  jsonw.py  language.py  lastfm.py  logconfig.py  lyrics.py  main.py  metadata.py  music.py  musicbrainz.py  offline_sync.py  packer.py  prometheus.py  radio.py  reddit.py  scanner.py  settings.py  spotify.py  theme.py  util.py
raphson_mp/migrations/: 0004-music.sql  0007-music.sql  0008-music.sql  0010-music.sql  0012-music.sql  0013-music.sql  0016-music.sql  0017-music.sql  0018-offline.sql  0020-music.sql  0021-cache.sql  0022-cache.sql  0023-music.sql  0027-music.sql  0028-music.sql  0030-music.sql  (+9 more)
src/: app.py  app_auth.py  assets.py  auth.py  az.py  babel.cfg  bing.py  cache.py  charts.py  cleanup.py  db.py  downloader.py  entrypoint.sh  genius.py  gunicorn.conf.py  image.py  jsonw.py  keyval.py  language.py  lastfm.py  logconfig.py  manage.py  metadata.py  music.py  musicbrainz.py  offline_sync.py  packer.py  radio.py  reddit.py  scanner.py  settings.py  stats_plots.py  util.py
templates/: login.jinja2  my-form.html  player.jinja2
termux/: install  settings  start  sync
tests/: test_auth.py  test_flask.py  test_lyrics.py  test_metadata.py  test_musicbrainz.py  test_packer.py  test_reddit.py  test_theme.py
(+242 files in other folders)
